<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Campos de información del paciente -->
    <TextView
        android:id="@+id/textViewNombrePaciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nombre_Paciente"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewEdadPaciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad_paciente"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/textViewDiagnosticoPaciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diagn_stico"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/textViewUltimaVisita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ultima_visita"
        android:textSize="14sp"/>

    <!-- Otros detalles adicionales del paciente según tus necesidades -->

</LinearLayout>

