<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/drawer_border"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:background="@drawable/header_bkg"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="16dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:layout_width="112dp"
            android:layout_height="87dp"
            android:src="@drawable/dani" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Correo_bar"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grupo_citas"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_ver_citas"
            android:drawablePadding="8dp"
            android:text="@string/ver_citas"
            android:textColor="@color/menu_1"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grupo_pacientes"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_agregar_paciente"
            android:drawablePadding="8dp"
            android:text="@string/ver_pacientes"
            android:textColor="@color/menu_1"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_marginTop="12dp"
        android:background="@color/menu_1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grupo_tratamientos"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/menu_1"
            android:text="@string/tratamientos"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_tratamientos"
            android:drawablePadding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grupo_comunicacion"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/menu_1"
            android:text="@string/asistente"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_chat"
            android:drawablePadding="8dp"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="11dp"
        android:layout_marginTop="12dp"
        android:background="@color/menu_1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grupo_configuracion"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/menu_1"
            android:text="@string/Configuracion"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_app_settings"
            android:drawablePadding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grupo_salir"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/menu_1"
            android:text="@string/Salir"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_salir"
            android:drawablePadding="8dp"/>

    </LinearLayout>

</LinearLayout>