<!-- activity_login_dentista.xml -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Dentista"
    android:background="#1191A3">

    <ImageView
        android:id="@+id/imageViewDentista"
        android:layout_width="137dp"
        android:layout_height="153dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="456dp"
        android:src="@drawable/dentista" />

    <EditText
        android:id="@+id/editTextUsernameDentista"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="373dp"
        android:backgroundTint="#2C2929"
        android:hint="@string/nombre_de_usuario"
        android:textColor="#001944" />

    <EditText
        android:id="@+id/editTextPasswordDentista"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="282dp"
        android:backgroundTint="#2C2929"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#001944"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonLoginDentista"
        android:layout_width="156dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="178dp"
        android:backgroundTint="#026165"
        android:onClick="loginDentista"
        android:text="@string/iniciar_sesi_n"
        android:textColor="#FFFFFF" />

</RelativeLayout>
