<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#e0f6f9">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="448dp"
        android:text="@string/seleccione_su_rol"
        android:textColor="#001944"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonDentista"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="257dp"
        android:backgroundTint="#026165"
        android:onClick="selectRole"
        android:text="@string/dentista"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/buttonAsistente"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="237dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="256dp"
        android:backgroundTint="#026165"
        android:onClick="selectRole"
        android:text="@string/asistente"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="83dp"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="87dp"
        android:layout_marginEnd="241dp"
        android:layout_marginBottom="323dp"
        app:srcCompat="@drawable/dentista" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="86dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="264dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="324dp"
        app:srcCompat="@drawable/asistente" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="368dp"
        app:cardCornerRadius="50dp">

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="292dp"
        android:layout_height="244dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="500dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/doc"></ImageView>

</RelativeLayout>
